0000-00-00:
    * version 0.8.9

2012-09-20:
    * version 0.8.8
    * Fix quick post not appearing for some people
    * Fix adding/removing accounts from the sidebar
    * Fix account-specific signatures and other features not working
    * Fix messages link in header not being highlighted for new messages
    * Display the GameFAQs clock only in quick post or the standard post page,
      instead of the header
    * Fix breakage from recent GameFAQs update
    * Fix favorites header menu in V12 theme

2012-06-11:
    * version 0.8.7
    * Changes on the New Topic/Message page:
        - Fix problem with buttons
        - Add keyboard shortcuts
    * Fix quick edit, quoting, topic creator label, edit history, and several
      other issues from the GameFAQs update
    * Allow tabbing to the post message buttons in quick edit
    * Fix page sometimes not reloading after quick posting if GameFOX's
      messages per page setting doesn't match GameFAQs

2012-01-25:
    * version 0.8.6
    * Fix crash with Ricapar's Classic theme when clicking on the login form
    * Fix split board lists overwriting favorites list
    * Fix board-specific signatures using board IDs
    * Enable code and quote HTML tag buttons by default
    * Switch to a password-based account manager instead of a cookie-based one -
      accounts will no longer need to have their password re-entered
      periodically
    * More minor bug fixes

2012-01-01:
    * version 0.8.5.1
    * Fix account-specific signatures

2011-12-31:
    * version 0.8.5
    * Make the edit history drop-down menu look nicer
    * Remove compatibility with:
        - Firefox 3.5 (3.6 is still supported)
        - SeaMonkey 2.0 (minimum is now 2.1)
    * Fix QuickWhois being unreadable with some themes
    * Fix options window on OS X
    * Simplify signature mangement: the signature textbox is hidden unless
      you're using GameFOX to manage your signatures. Signatures are now stored