@@ -1,5 +1,6 @@
 0000-00-00:
     * version 0.8.9
+    * Fix QuickWhois for new profiles
 
 2012-09-20:
     * version 0.8.8
